Removed API key, now input()

--- a/Classification/train_new_classifier.ipynb
+++ b/Classification/train_new_classifier.ipynb
@@ -313,7 +313,7 @@
    },
    "outputs": [],
    "source": [
-    "# plot confusion matrix\n",
+    "[1::2]# plot confusion matrix\n",
     "%matplotlib inline\n",
     "y_pred = classifier.predict(X_test)\n",
     "SDS_classify.plot_confusion_matrix(y_test, y_pred,\n",
@@ -391,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   },
   "toc": {
    "base_numbering": 1,
