--- a/VegEdge_DriverTemplate.ipynb
+++ b/VegEdge_DriverTemplate.ipynb
@@ -1,31 +1,81 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e30042e3",
+   "metadata": {},
+   "source": [
+    "# Notebook to drive Vegetation Edge extraction from Satellite Images\n",
+    "The programming language we are using is called Python. The code has all been written and this notebook will guide you through modifying the analysis for your own area of interest, and executing the analysis.\n",
+    "\n",
+    "**To run a code block, click in a cell, hold down shift, and press enter.** An asterisk in square brackets `In [*]:` will appear while the code is being executed, and this will change to a number `In [1]:` when the code is finished. *The order in which you execute the code blocks matters, they must be run in sequence.*\n",
+    "\n",
+    "Inside blocks of python code there are comments indicated by lines that start with `#`. These lines are not computer code but rather comments providing information about what the code is doing to help you follow along and troubleshoot. \n",
+    "\n",
+    "Before we get started we need to tell python to import the tools we want to use (these are called modules):"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c7cc450e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "QStandardPaths: XDG_RUNTIME_DIR not set, defaulting to '/tmp/runtime-mhurst'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Imports modules\n",
+    "import os, sys, glob, pickle, warnings, matplotlib, ee\n",
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from datetime import datetime\n",
+    "import geopandas as gpd\n",
+    "from Toolshed import Download, Toolbox, VegetationLine, Plotting, Transects\n",
+    "\n",
+    "# Initialise plotting environment and earth engine\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "matplotlib.use('Qt5Agg')\n",
+    "plt.ion()\n",
+    "sns.set()\n",
+    "ee.Initialize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc712e56",
+   "metadata": {},
+   "source": [
+    "## Name your project\n",
+    "Start by naming your project, then we'll set up a folder structure to store the new data, files and outputs created by the analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c1384b8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports and Initialisation\n",
+    "# DEFINE YOUR PROJECT NAME HERE e.g. based on your chosen site\n",
+    "sitename = 'SITENAME'\n",
     "\n",
-    "import os\n",
-    "import glob\n",
-    "import numpy as np\n",
-    "import pickle\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "import matplotlib\n",
-    "matplotlib.use('Qt5Agg')\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.ion()\n",
-    "from datetime import datetime\n",
-    "from Toolshed import Download, Toolbox, VegetationLine, Plotting, Transects\n",
-    "import seaborn as sns; sns.set()\n",
-    "import ee\n",
-    "import geopandas as gpd\n",
+    "# directory where the data will be stored\n",
+    "filepath = os.path.join(os.getcwd(), 'Data')\n",
+    "if os.path.isdir(filepath) is False:\n",
+    "    os.mkdir(filepath)\n",
     "\n",
-    "ee.Initialize()\n"
+    "# directory where outputs will be stored\n",
+    "direc = os.path.join(filepath, sitename)\n",
+    "if os.path.isdir(direc) is False:\n",
+    "    os.mkdir(direc)"
    ]
   },
   {
@@ -33,45 +83,76 @@
    "id": "2bdc676e",
    "metadata": {},
    "source": [
-    "## Parameter Definitions"
+    "## Define Area of Interest\n",
+    "Area of Interest (AOI) can be defined using a pre-existing shapefile (e.g. by drawing a box within a GIS). If using a shapefile this should only contain one singlepart shape and record (the use of multiple shapes for iteration may be added in the future). Alternatively you can provide the coordinates of the four corners of a bounding box. The shapefile or coordinates should be provided in latitudes and longitudes (i.e. WGS1984, EPSG code 4326)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b96f2bf8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32630\n"
+     ]
+    }
+   ],
    "source": [
-    "# Define AOI using coordinates of a rectangle\n",
+    "# shapefile name here if you have one, this should only contain 1 single part shape/record\n",
+    "filename = \"../Musselburgh/AOI.shp\"\n",
     "\n",
-    "# The points represent the corners of a bounding box that go around your site\n",
-    "sitename = 'SITENAME'\n",
-    "lonmin, lonmax = -2.84869, -2.79878\n",
-    "latmin, latmax = 56.32641, 56.39814\n",
+    "# Check if it exists and read the shape if so\n",
+    "if Path(filename).exists():\n",
+    "    AOI = gpd.read_file(filename)\n",
+    "    if not AOI.crs == \"epsg:4326\":\n",
+    "        sys.exit(\"Wrong Coordinate System\")\n",
+    "    \n",
+    "    # get minimum bounding box\n",
+    "    lonmin, latmin, lonmax, latmax = AOI.bounds.iloc[0]    \n",
     "\n",
+    "else:\n",
+    "    print(\"No file found\")\n",
+    "    # Define AOI using coordinates of a rectangle\n",
+    "    # The points represent the corners of a bounding box that go around your site\n",
+    "    lonmin, lonmax = -2.84869, -2.79878\n",
+    "    latmin, latmax = 56.32641, 56.39814\n",
     "\n",
-    "polygon, point = Toolbox.AOI(lonmin, lonmax, latmin, latmax)\n",
-    "# it's recommended to convert the polygon to the smallest rectangle (sides parallel to coordinate axes)       \n",
+    "# setup an AOI object\n",
+    "UTM_epsg = Toolbox.get_UTMepsg_from_wgs((latmin+latmax)/2, (lonmin+lonmax)/2)\n",
+    "polygon, point = Toolbox.AOI(lonmin, lonmax, latmin, latmax, sitename, UTM_epsg)\n",
+    "\n",
+    "# it's recommended to convert the polygon to the smallest rectangle (sides parallel to coordinate axes)\n",
+    "### why not just call this at the end of the AOI function then?\n",
     "polygon = Toolbox.smallest_rectangle(polygon)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "706a320c",
+   "metadata": {},
+   "source": [
+    "## Image settings\n",
+    "In order to analyse a timeseries of satellite images, we need to define a range of time over which to perform the analysis. We also need to define which satellites we wish to work with, where `L5` is Landsat 5, `L8` is Landsat 8, and `S2` is Sentinel 2."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1f43da99",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Image Settings\n",
-    "\n",
-    "# directory where the data will be stored\n",
-    "filepath = os.path.join(os.getcwd(), 'Data')\n",
-    "if os.path.isdir(filepath) is False:\n",
-    "    os.mkdir(filepath)\n",
-    "\n",
     "# date range\n",
-    "dates = ['2021-05-01', '2021-07-02']\n",
+    "StartDate = '2020-01-01'\n",
+    "EndDate = '2023-01-01'\n",
+    "dates = [StartDate, EndDate]\n",
     "if len(dates)>2:\n",
     "    daterange='no'\n",
     "else:\n",
@@ -82,42 +163,79 @@
     "# Input a list of containing any/all of 'L5', 'L8', 'S2'\n",
     "sat_list = ['L5','L8','S2']\n",
     "\n",
-    "projection_epsg = 27700 # OSGB 1936\n",
-    "image_epsg = 32630 # UTM Zone 30N\n",
+    "projection_epsg = 27700 # OSGB 1936 # THIS WILL ALSO BE OBSELETE?\n",
+    "# image_epsg = 32630 # UTM Zone 30N THIS IS NOW OBSELETE AS DEFINED ABOVE\n",
     "\n",
     "# put all the inputs into a dictionnary\n",
-    "inputs = {'polygon': polygon, 'dates': dates, 'daterange':daterange, 'sat_list': sat_list, 'sitename': sitename, 'filepath':filepath}\n",
-    "\n",
-    "direc = os.path.join(filepath, sitename)\n",
-    "\n",
-    "if os.path.isdir(direc) is False:\n",
-    "    os.mkdir(direc)\n",
-    " "
+    "inputs = {'polygon': polygon, 'dates': dates, 'daterange':daterange, 'sat_list': sat_list, 'sitename': sitename, 'filepath':filepath}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddbf8e1a",
+   "metadata": {},
+   "source": [
+    "### Check image availability\n",
+    "Before we start processing any imagery, we'll check what images are available in the date range specified for the desired platforms."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "91e83db4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Images available between 2020-01-01 and 2023-01-01:\n",
+      "- In Landsat Tier 1 & Sentinel-2 Level-1C:\n",
+      "  L5: 0 images\n",
+      "  L8: 53 images\n",
+      "  S2: 619 images\n",
+      "  Total: 672 images\n",
+      "- In Landsat Tier 2:\n",
+      "  L5: 0 images\n",
+      "  L8: 17 images\n",
+      "  Total: 17 images\n"
+     ]
+    }
+   ],
    "source": [
-    "# Image Retrieval\n",
-    "\n",
     "# before downloading the images, check how many images are available for your inputs\n",
     "Download.check_images_available(inputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d48d47a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<ee.imagecollection.ImageCollection object at 0x7f0c6de6ccd0>, <ee.imagecollection.ImageCollection object at 0x7f0c7ec31340>, <ee.imagecollection.ImageCollection object at 0x7f0c7ec31a90>]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "metadata_collection() takes 2 positional arguments but 4 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3662640/2129317634.py\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mSat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mToolbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage_retrieval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mmetadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mToolbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetadata_collection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msat_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilepath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msitename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: metadata_collection() takes 2 positional arguments but 4 were given"
+     ]
+    }
+   ],
    "source": [
     "# Image Download\n",
-    "\n",
     "Sat = Toolbox.image_retrieval(inputs)\n",
+    "print(Sat)\n",
     "metadata = Toolbox.metadata_collection(sat_list, Sat, filepath, sitename)"
    ]
   },
