minor updates to driver to move towards being able to run a full analysis

--- a/VegEdge_DriverTemplate.ipynb
+++ b/VegEdge_DriverTemplate.ipynb
@@ -17,18 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c7cc450e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "QStandardPaths: XDG_RUNTIME_DIR not set, defaulting to '/tmp/runtime-mhurst'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Imports modules\n",
     "import os, sys, glob, pickle, warnings, matplotlib, ee\n",
@@ -59,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c1384b8a",
    "metadata": {},
    "outputs": [],
@@ -89,27 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b96f2bf8",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32630\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# shapefile name here if you have one, this should only contain 1 single part shape/record\n",
-    "filename = \"../Musselburgh/AOI.shp\"\n",
+    "AOIfilename = \"../Musselburgh/AOI.shp\"\n",
+    "BLfilename = \"../Musselburgh/Baseline.shp\"\n",
     "\n",
     "# Check if it exists and read the shape if so\n",
-    "if Path(filename).exists():\n",
-    "    AOI = gpd.read_file(filename)\n",
+    "if Path(AOIfilename).exists():\n",
+    "    AOI = gpd.read_file(AOIfilename)\n",
     "    if not AOI.crs == \"epsg:4326\":\n",
     "        sys.exit(\"Wrong Coordinate System\")\n",
     "    \n",
@@ -124,7 +109,7 @@
     "    latmin, latmax = 56.32641, 56.39814\n",
     "\n",
     "# setup an AOI object\n",
-    "UTM_epsg = Toolbox.get_UTMepsg_from_wgs((latmin+latmax)/2, (lonmin+lonmax)/2)\n",
+    "UTM_epsg = (int)(Toolbox.get_UTMepsg_from_wgs((latmin+latmax)/2, (lonmin+lonmax)/2))\n",
     "polygon, point = Toolbox.AOI(lonmin, lonmax, latmin, latmax, sitename, UTM_epsg)\n",
     "\n",
     "# it's recommended to convert the polygon to the smallest rectangle (sides parallel to coordinate axes)\n",
@@ -143,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1f43da99",
    "metadata": {},
    "outputs": [],
@@ -176,32 +161,15 @@
    "metadata": {},
    "source": [
     "### Check image availability\n",
-    "Before we start processing any imagery, we'll check what images are available in the date range specified for the desired platforms."
+    "Before we start processing any imagery, we'll check what images are available in the date range specified for the desired platforms. Note that the tool does not download any imagery since it is all processed in Google Earth Engine."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "91e83db4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Images available between 2020-01-01 and 2023-01-01:\n",
-      "- In Landsat Tier 1 & Sentinel-2 Level-1C:\n",
-      "  L5: 0 images\n",
-      "  L8: 53 images\n",
-      "  S2: 619 images\n",
-      "  Total: 672 images\n",
-      "- In Landsat Tier 2:\n",
-      "  L5: 0 images\n",
-      "  L8: 17 images\n",
-      "  Total: 17 images\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# before downloading the images, check how many images are available for your inputs\n",
     "Download.check_images_available(inputs)"
@@ -209,34 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d48d47a0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<ee.imagecollection.ImageCollection object at 0x7f0c6de6ccd0>, <ee.imagecollection.ImageCollection object at 0x7f0c7ec31340>, <ee.imagecollection.ImageCollection object at 0x7f0c7ec31a90>]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "metadata_collection() takes 2 positional arguments but 4 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3662640/2129317634.py\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mSat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mToolbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage_retrieval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mmetadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mToolbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetadata_collection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msat_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilepath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msitename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: metadata_collection() takes 2 positional arguments but 4 were given"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Image Download\n",
+    "# Image Metadata Retrieval\n",
     "Sat = Toolbox.image_retrieval(inputs)\n",
-    "print(Sat)\n",
-    "metadata = Toolbox.metadata_collection(sat_list, Sat, filepath, sitename)"
+    "metadata = Toolbox.metadata_collection(inputs, Sat)"
    ]
   },
   {
@@ -254,24 +202,37 @@
     "    os.mkdir(BasePath)\n",
     "\n",
     "settings = {\n",
-    "    # general parameters:\n",
+    "    \n",
+    "    # General parameters:\n",
     "    'cloud_thresh': 0.5,        # threshold on maximum cloud cover\n",
-    "    'output_epsg': image_epsg,     # epsg code of spatial reference system desired for the output   \n",
+    "    'output_epsg': UTM_epsg,  # epsg code of spatial reference system desired for the output   \n",
     "    'wetdry':True,              # extract wet-dry boundary as well as veg\n",
-    "    # quality control:\n",
-    "    'check_detection': True,    # if True, shows each shoreline detection to the user for validation\n",
+    "    \n",
+    "    # Quality control:\n",
+    "    'check_detection': False,    # if True, shows each shoreline detection to the user for validation\n",
     "    'adjust_detection': False,  # if True, allows user to adjust the postion of each shoreline by changing the threhold\n",
-    "    'save_figure': True,        # if True, saves a figure showing the mapped shoreline for each image\n",
+    "    'save_figure': False,        # if True, saves a figure showing the mapped shoreline for each image\n",
+    "    \n",
     "    # [ONLY FOR ADVANCED USERS] shoreline detection parameters:\n",
     "    'min_beach_area': 200,     # minimum area (in metres^2) for an object to be labelled as a beach\n",
     "    'buffer_size': 250,         # radius (in metres) for buffer around sandy pixels considered in the shoreline detection\n",
     "    'min_length_sl': 500,       # minimum length (in metres) of shoreline perimeter to be valid\n",
     "    'cloud_mask_issue': False,  # switch this parameter to True if sand pixels are masked (in black) on many images  \n",
+    "    \n",
     "    # add the inputs defined previously\n",
     "    'inputs': inputs,\n",
     "    'projection_epsg': projection_epsg,\n",
     "    'year_list': years\n",
     "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65d61801",
+   "metadata": {},
+   "source": [
+    "### Reference Shoreline\n",
+    "Information goes here to explain the reference shoreline"
    ]
   },
   {
@@ -282,20 +243,13 @@
    "outputs": [],
    "source": [
     "# Vegetation Edge Reference Line Load-In\n",
+    "referenceLine, ref_epsg = Toolbox.ProcessRefline(BLfilename,settings)\n",
+    "DF = gpd.read_file(BLfilename)\n",
     "\n",
-    "\"\"\"\n",
-    "OPTION 2: Load in coordinates of reference line shapefile and format for use in\n",
-    "the veg extraction.\n",
-    "\"\"\"\n",
-    "\n",
-    "#referenceLineShp = os.path.join(inputs['filepath'], sitename,'StAndrews_refLine.shp')\n",
-    "referenceLineShp = os.path.join(inputs['filepath'], 'SITE_refLine.shp')\n",
-    "referenceLine, ref_epsg = Toolbox.ProcessRefline(referenceLineShp,settings)\n",
-    "\n",
+    "# update settings with reference line info\n",
     "settings['reference_shoreline'] = referenceLine\n",
     "settings['ref_epsg'] = ref_epsg\n",
-    "# Distance to buffer reference line by (this is in metres)\n",
-    "settings['max_dist_ref'] = 150\n"
+    "settings['max_dist_ref'] = 250 # Distance to buffer reference line by (this is in metres)"
    ]
   },
   {
@@ -311,8 +265,11 @@
     "OPTION 1: Run extraction tool and return output dates, lines, filenames and \n",
     "image properties.\n",
     "\"\"\"\n",
-    "output, output_latlon, output_proj = VegetationLine.extract_veglines(metadata, settings, polygon, dates)\n",
-    "\n"
+    "\n",
+    "clf_model = 'L5L8S2_SAVI_MLPClassifier_Veg.pkl' \n",
+    "output, output_latlon, output_proj = VegetationLine.extract_veglines(metadata, settings, polygon, dates, clf_model)\n",
+    "\n",
+    "### cant run this currently due to lack of tides."
    ]
   },
   {
