Typo in metadata fn (only takes two args now)

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -181,7 +181,7 @@
    "outputs": [],
    "source": [
     "Sat = Toolbox.image_retrieval(inputs)\n",
-    "metadata = Toolbox.metadata_collection(sat_list, Sat, filepath, sitename)"
+    "metadata = Toolbox.metadata_collection(inputs, Sat)"
    ]
   },
   {
