Local image retrieval for Planet now in templates

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -186,6 +186,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0a3a880f",
+   "metadata": {},
+   "source": [
+    "### Local Image Retrieval (Planet)\n",
+    "For the time being, Planet API is very slow at downloading files (depending on the size of your area). You may want to use the [Planet online data](https://developers.planet.com/docs/apps/explorer/) download portal and move the files to local folders that will have been created at the Toolbox.CreateFileStructure() step. \n",
+    "- Move the image TIFFs into 'Data/YOURSITENAME/local_images/PlanetScope';\n",
+    "- and the respective cloud masks into 'Data/YOURSITENAME/local_images/PlanetScope/cloudmasks'.\n",
+    "- You can move any leftover extra files into 'Data/YOURSITENAME/AuxiliaryImages'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a99d4f52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Sat = Toolbox.LocalImageRetrieval(inputs)\n",
+    "metadata = Toolbox.LocalImageMetadata(inputs, Sat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "51b8a14c",
    "metadata": {},
    "source": [
