remove satname from inputs if no images found

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Download.check_images_available(inputs)"
+    "inputs = Download.check_images_available(inputs)"
    ]
   },
   {
