Highlighting need for single reference line

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -89,6 +89,7 @@
     "wetdry = True\n",
     "\n",
     "# Reference shoreline/veg line shapefile name (should be stored in a folder called referenceLines in Data)\n",
+    "# Line should be ONE CONTINUOUS linestring along the shore, stored as a shapefile in WGS84 coord system\n",
     "referenceLineShp = 'SITENAME_refLine.shp'\n",
     "# Maximum amount in metres by which to buffer the reference line for capturing veg edges within\n",
     "max_dist_ref = 150"
