RemoveDuplicate now takes only longest line from same satellite

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -342,15 +342,10 @@
     "SiteFilepath = os.path.join(inputs['filepath'], sitename)\n",
     "with open(os.path.join(SiteFilepath, sitename + '_output.pkl'), 'rb') as f:\n",
     "    output = pickle.load(f)\n",
-    "# with open(os.path.join(SiteFilepath, sitename + '_output_latlon.pkl'), 'rb') as f:\n",
-    "    # output_latlon = pickle.load(f)\n",
-    "# with open(os.path.join(SiteFilepath, sitename + '_output_proj.pkl'), 'rb') as f:\n",
-    "    # output_proj = pickle.load(f)\n",
     "\n",
-    "# Remove Duplicate Lines (images taken on the same date by the same satellite)\n",
-    "output = Toolbox.remove_duplicates(output) \n",
-    "# output_latlon = Toolbox.remove_duplicates(output_latlon)\n",
-    "# output_proj = Toolbox.remove_duplicates(output_proj)"
+    "# Remove Duplicate Lines\n",
+    "# For images taken on the same date by the same satellite, keep only the longest line\n",
+    "output = Toolbox.RemoveDuplicates(output) "
    ]
   },
   {
