Transect folder Veglines typo

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -365,10 +365,10 @@
    "outputs": [],
    "source": [
     "# Save output veglines \n",
-    "Toolbox.SaveConvShapefiles(output, BasePath, sitename, settings['projection_epsg'])\n",
+    "Toolbox.SaveConvShapefiles(output, BasePath, sitename, settings['output_epsg'])\n",
     "# Save output shorelines if they were generated\n",
     "if settings['wetdry'] == True:\n",
-    "    Toolbox.SaveConvShapefiles_Water(output, BasePath, sitename, settings['projection_epsg'])"
+    "    Toolbox.SaveConvShapefiles_Water(output, BasePath, sitename, settings['output_epsg'])"
    ]
   },
   {
@@ -391,7 +391,7 @@
     "NoSmooths = 100\n",
     "TransectSpacing = 10\n",
     "DistanceInland = 100\n",
-    "DistanceOffshore = 350\n",
+    "DistanceOffshore = 100\n",
     "\n",
     "# provide average beach slope for site, for calculating corrected beach widths\n",
     "beachslope = 0.02 "
@@ -413,7 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BasePath = 'Data/' + sitename + '/veglines'\n",
+    "BasePath = 'Data/' + sitename + '/Veglines'\n",
     "VeglineShp = glob.glob(BasePath+'/*veglines.shp')\n",
     "VeglineGDF = gpd.read_file(VeglineShp[0])\n",
     "WaterlineShp = glob.glob(BasePath+'/*waterlines.shp')\n",
