Updated timeseries plot calls

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -574,15 +574,15 @@
    "outputs": [],
    "source": [
     "# Timeseries Plotting\n",
-    "# EDIT ME: Select transect ID to plot\n",
-    "TransectIDs = [[1575,309]]\n",
     "\n",
+    "# EDIT ME: Select transect ID to plot\n",
+    "TransectIDs = [[25,30,35],50,75]\n",
     "for TransectID in TransectIDs:\n",
-    "    DateRange = [0,len(TransectInterGDF['dates'][TransectID])]\n",
     "    # Plot timeseries of cross-shore veg position\n",
-    "    Plotting.VegTimeseries(sitename, TransectInterGDF, TransectID, DateRange)\n",
+    "    Plotting.VegTimeseries(sitename, TransectInterGDF, TransectID, Hemisphere='N')\n",
     "    # If plotting veg and water lines together\n",
-    "    # Plotting.VegWaterTimeseries(sitename, TransectInterGDF, TransectID, Hemisphere='N') "
+    "    if settings['wetdry']:\n",
+    "        Plotting.VegWaterTimeseries(sitename, TransectInterGDFWater, TransectID, Hemisphere='N')\n"
    ]
   },
   {
@@ -593,13 +593,12 @@
    "outputs": [],
    "source": [
     "# Beach Width Plotting\n",
-    "# EDIT ME: Select transect ID to plot\n",
-    "TransectIDs = [180,1650]\n",
     "\n",
+    "# Select transect ID to plot\n",
+    "TransectIDs = [[25,30,35],50,75]\n",
     "for TransectID in TransectIDs:\n",
     "    # Plot timeseries of cross-shore width between water edge and veg edge \n",
-    "    DateRange = [0,len(TransectInterGDF['dates'][TransectID])]\n",
-    "    Plotting.WidthTimeseries(sitename, TransectInterGDF, TransectID, DateRange)    "
+    "    Plotting.WidthTimeseries(sitename, TransectInterGDFWater, TransectID, Hemisphere='N')\n"
    ]
   },
   {
