old reference to Elves changed to Toolshed

--- a/Classification/train_new_classifier_montroseveg.ipynb
+++ b/Classification/train_new_classifier_montroseveg.ipynb
@@ -56,7 +56,7 @@
     "plt.ion()\n",
     "from datetime import datetime, timezone, timedelta\n",
     "\n",
-    "from Elves import Download, Image_Processing, Shoreline, Toolbox, Transects, VegetationLine\n",
+    "from Toolshed import Download, Image_Processing, Shoreline, Toolbox, Transects, VegetationLine\n",
     "\n",
     "import mpl_toolkits as mpl\n",
     "from mpl_toolkits.axes_grid1.inset_locator import zoomed_inset_axes, mark_inset\n",
