--- a/Classification/train_new_classifier_veg.ipynb
+++ b/Classification/train_new_classifier_veg.ipynb
@@ -63,7 +63,7 @@
     "# coastsat modules\n",
     "sys.path.insert(0, os.pardir)\n",
     "#from coastsat import SDS_download, SDS_preprocess, SDS_shoreline, SDS_tools, SDS_classify\n",
-    "from Elves import Toolbox, Image_Processing, Download, Shoreline, Classifier\n",
+    "from Toolshed import Toolbox, Image_Processing, Download, Shoreline, Classifier\n",
     "\n",
     "# plotting params\n",
     "plt.rcParams['font.size'] = 14\n",
