Added wetdry cond to waterline shapefile definition

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -416,8 +416,9 @@
     "BasePath = 'Data/' + sitename + '/Veglines'\n",
     "VeglineShp = glob.glob(BasePath+'/*veglines.shp')\n",
     "VeglineGDF = gpd.read_file(VeglineShp[0])\n",
-    "WaterlineShp = glob.glob(BasePath+'/*waterlines.shp')\n",
-    "WaterlineGDF = gpd.read_file(WaterlineShp[0])\n",
+    "if settings['wetdry'] == True:\n",
+    "    WaterlineShp = glob.glob(BasePath+'/*waterlines.shp')\n",
+    "    WaterlineGDF = gpd.read_file(WaterlineShp[0])\n",
     "# Produces Transects for the reference line\n",
     "TransectSpec =  os.path.join(BasePath, sitename+'_Transects.shp')\n",
     "\n",
