Added arg to Plotting to suppress plot windows

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -580,10 +580,10 @@
     "TransectIDs = [[25,30,35],50,75]\n",
     "for TransectID in TransectIDs:\n",
     "    # Plot timeseries of cross-shore veg position\n",
-    "    Plotting.VegTimeseries(sitename, TransectInterGDF, TransectID, Hemisphere='N')\n",
+    "    Plotting.VegTimeseries(sitename, TransectInterGDF, TransectID, Hemisphere='N', ShowPlot=True)\n",
     "    # If plotting veg and water lines together\n",
     "    if settings['wetdry']:\n",
-    "        Plotting.VegWaterTimeseries(sitename, TransectInterGDFWater, TransectID, Hemisphere='N')\n"
+    "        Plotting.VegWaterTimeseries(sitename, TransectInterGDFWater, TransectID, Hemisphere='N', ShowPlot=True)\n"
    ]
   },
   {
