Added line to plot all Trs in timeseries

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -577,7 +577,13 @@
     "# Timeseries Plotting\n",
     "\n",
     "# EDIT ME: Select transect ID to plot\n",
-    "TransectIDs = [[25,30,35],50,75]\n",
+    "# You can plot subplots within a list of plot IDs, e.g. [[sub1, sub2], plot2]\n",
+    "# You can also comment Line 1 out and uncomment Line 2 to create plots for ALL Transect IDs\n",
+    "# NOTE: If you want to plot ALL transects, it's recommended you switch ShowPlot=False\n",
+    "\n",
+    "TransectIDs = [[25,30,35],50,75] # Line 1\n",
+    "# TransectIDs = list(TransectInterGDF['TransectID']) # Line 2\n",
+    "\n",
     "for TransectID in TransectIDs:\n",
     "    # Plot timeseries of cross-shore veg position\n",
     "    Plotting.VegTimeseries(sitename, TransectInterGDF, TransectID, Hemisphere='N', ShowPlot=True)\n",
