No longer require tides for just veg run (no tide .csv = skip)

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -256,7 +256,8 @@
    "metadata": {},
    "source": [
     "### Tidal Information\n",
-    "Compute tides from FES2014 data which is downloaded from the pyFES server. Only relevant for shoreline processing (as it is used to correct for the effects of tides on th cross-shore waterline position)."
+    "Compute tides from FES2014 data which is downloaded from the pyFES server. Only relevant for shoreline processing (as it is used to correct for the effects of tides on th cross-shore waterline position).",
+    "# (ONLY RUN IF YOU HAVE pyFES INSTALLED AND WANT TIDAL INFO SAVED)"
    ]
   },
   {
