Included reference to AROSICS coreg in driver templates

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -255,9 +255,10 @@
    "id": "25e2d531",
    "metadata": {},
    "source": [
-    "### Tidal Information\n",
-    "Compute tides from FES2014 data which is downloaded from the pyFES server. Only relevant for shoreline processing (as it is used to correct for the effects of tides on th cross-shore waterline position).",
-    "# (ONLY RUN IF YOU HAVE pyFES INSTALLED AND WANT TIDAL INFO SAVED)"
+    "### <font color='red'>Tidal Information</font>\n",
+    "Compute tides from FES2014 data which is downloaded from the pyFES server. Only relevant for shoreline processing (as it is used to correct for the effects of tides on the cross-shore waterline position). \n",
+    "\n",
+    "(ONLY RUN IF YOU HAVE pyFES INSTALLED AND WANT TIDAL INFO SAVED. If you do, change `tidepath` to the path to your aviso-fes folder)"
    ]
   },
   {
@@ -297,6 +298,25 @@
     "settings['ref_epsg'] = ref_epsg\n",
     "# Distance to buffer reference line by (this is in metres)\n",
     "settings['max_dist_ref'] = max_dist_ref"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2ccb641",
+   "metadata": {},
+   "source": [
+    "### <font color='red'>Reference Image for Coregistration</font>\n",
+    "You can now coregister your satellite images using AROSICS. If you want to try coregistering your images to improve timeseries accuracy, <font color='red'>provide a filepath to a reference RGB image.</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7734d9d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings['reference_coreg_im'] = None # leave as None if no coregistration is to be performed"
    ]
   },
   {
@@ -695,7 +715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
