Added UTM image_epsg info to ipynb driver
Implemented in response to https://github.com/fmemuir/COASTGUARD/issues/10#issuecomment-1963075501

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -65,6 +65,9 @@
    "outputs": [],
    "source": [
     "# Define desired coordinate projections\n",
+    "# NOTE: image_epsg should always be in the NORTHERN UTM zone, regardless of whether your location is\n",
+    "# in the northern or southern hemisphere. E.g. if your location is New South Wales (UTM Zone 56S),\n",
+    "# the image_epsg should be 32656 (which is UTM Zone 56N).\n",
     "projection_epsg = 27700 # OSGB 1936\n",
     "image_epsg = 32630 # UTM Zone 30N\n",
     "\n",
