Removed image_epsg refs (new fn for finding image_epsg from metadata)

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -69,7 +69,6 @@
     "# in the northern or southern hemisphere. E.g. if your location is New South Wales (UTM Zone 56S),\n",
     "# the image_epsg should be 32656 (which is UTM Zone 56N).\n",
     "projection_epsg = 27700 # OSGB 1936\n",
-    "image_epsg = 32630 # UTM Zone 30N\n",
     "\n",
     "# Define AOI using coordinates of a rectangle\n",
     "# The points represent the corners of a bounding box that go around your site\n",
@@ -231,6 +230,8 @@
     "\n",
     "if os.path.isdir(BasePath) is False:\n",
     "    os.mkdir(BasePath)\n",
+    "\n",
+    "image_epsg = Toolbox.GetImageEPSG(inputs, metadata)\n",
     "\n",
     "settings = {\n",
     "    # general parameters:\n",
