Forgot to update ProduceTransects in template .ipynb

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -432,21 +432,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BasePath = 'Data/' + sitename + '/Veglines'\n",
+    "VegBasePath = 'Data/' + sitename + '/Veglines'\n",
     "VeglineShp = glob.glob(BasePath+'/*veglines.shp')\n",
     "VeglineGDF = gpd.read_file(VeglineShp[0])\n",
+    "VeglineGDF = VeglineGDF.sort_values(by='dates') # sort GDF by dates to ensure transect intersects occur in chronological order\n",
+    "VeglineGDF = VeglineGDF.reset_index(drop=True) # reset GDF index after date sorting\n",
     "if settings['wetdry'] == True:\n",
     "    WaterlineShp = glob.glob(BasePath+'/*waterlines.shp')\n",
     "    WaterlineGDF = gpd.read_file(WaterlineShp[0])\n",
+    "    WaterlineGDF = WaterlineGDF.sort_values(by='dates') # as above with VeglineGDF date sorting\n",
+    "    WaterlineGDF = WaterlineGDF.reset_index(drop=True)\n",
     "# Produces Transects for the reference line\n",
     "TransectSpec =  os.path.join(BasePath, sitename+'_Transects.shp')\n",
     "\n",
     "# If transects already exist, load them in\n",
-    "if os.path.isfile(TransectSpec) is False:\n",
-    "    TransectGDF = Transects.ProduceTransects(SmoothingWindowSize, NoSmooths, TransectSpacing, DistanceInland, DistanceOffshore, settings['output_epsg'], sitename, BasePath, referenceLinePath)\n",
+    "if os.path.isfile(TransectSpec[:-3]+'pkl') is False:\n",
+    "    TransectGDF = Transects.ProduceTransects(settings, SmoothingWindowSize, NoSmooths, TransectSpacing, DistanceInland, DistanceOffshore, VegBasePath, referenceLineShp)\n",
     "else:\n",
     "    print('Transects already exist and were loaded')\n",
-    "    TransectGDF = gpd.read_file(TransectSpec)\n",
+    "    with open(TransectSpec[:-3]+'pkl', 'rb') as Tfile: \n",
+    "        TransectGDF = pickle.load(Tfile)\n",
     "    \n",
     "# make new transect intersections folder\n",
     "if os.path.isdir(os.path.join(filepath, sitename, 'intersections')) is False:\n",
@@ -546,7 +551,7 @@
     "    TransectInterGDFTopo = Transects.SlopeIntersect(settings, TransectInterGDFTopo, VeglineGDF, BasePath, TIF)\n",
     "    \n",
     "    with open(os.path.join(filepath, sitename, 'intersections', sitename + '_transect_topo_intersects.pkl'), 'wb') as f:\n",
-    "        pickle.dump(TransectInterGDFTopo, f)\n"
+    "        pickle.dump(TransectInterGDFTopo, f)"
    ]
   },
   {
@@ -719,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
