Changed 'Veglines' basepath to 'veglines' for consistency

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BasePath = 'Data/' + sitename + '/Veglines'\n",
+    "BasePath = 'Data/' + sitename + '/veglines'\n",
     "\n",
     "if os.path.isdir(BasePath) is False:\n",
     "    os.mkdir(BasePath)\n",
@@ -432,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VegBasePath = 'Data/' + sitename + '/Veglines'\n",
+    "VegBasePath = 'Data/' + sitename + '/veglines'\n",
     "VeglineShp = glob.glob(BasePath+'/*veglines.shp')\n",
     "VeglineGDF = gpd.read_file(VeglineShp[0])\n",
     "VeglineGDF = VeglineGDF.sort_values(by='dates') # sort GDF by dates to ensure transect intersects occur in chronological order\n",
