'veglines' folder for shapefiles changed to 'lines' (more generic)

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -549,7 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BasePath = 'Data/' + sitename + '/veglines'\n",
+    "BasePath = 'Data/' + sitename + '/lines'\n",
     "\n",
     "if os.path.isdir(BasePath) is False:\n",
     "    os.mkdir(BasePath)\n",
@@ -755,7 +755,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VegBasePath = 'Data/' + sitename + '/veglines'\n",
+    "VegBasePath = 'Data/' + sitename + '/lines'\n",
     "VeglineShp = glob.glob(BasePath+'/*veglines.shp')\n",
     "VeglineGDF = gpd.read_file(VeglineShp[0])\n",
     "VeglineGDF = VeglineGDF.sort_values(by='dates') # sort GDF by dates to ensure transect intersects occur in chronological order\n",
