Sectioning off stages of predictive model

--- a/COASTGUARD_PredictionDriver.ipynb
+++ b/COASTGUARD_PredictionDriver.ipynb
@@ -64,23 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "78cf828f-977a-44e8-8563-3906b17b29f5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'geopandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m filepath \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(os\u001b[38;5;241m.\u001b[39mgetcwd(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mData\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Load in transect data with coastal change variables\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m TransectInterGDF, TransectInterGDFWater, TransectInterGDFTopo, TransectInterGDFWave \u001b[38;5;241m=\u001b[39m \u001b[43mPredictions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mLoadIntersections\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msitename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Compile relevant coastal change metrics into one dataframe\u001b[39;00m\n\u001b[1;32m      8\u001b[0m CoastalDF \u001b[38;5;241m=\u001b[39m Predictions\u001b[38;5;241m.\u001b[39mCompileTransectData(TransectInterGDF, TransectInterGDFWater, TransectInterGDFTopo, TransectInterGDFWave)\n",
-      "File \u001b[0;32m~/PhD/Year2/ModelsFrameworks/COASTGUARD/Toolshed/Predictions.py:38\u001b[0m, in \u001b[0;36mLoadIntersections\u001b[0;34m(filepath, sitename)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mLoadIntersections\u001b[39m(filepath, sitename):\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin\n\u001b[1;32m     37\u001b[0m               (filepath , sitename, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mintersections\u001b[39m\u001b[38;5;124m'\u001b[39m, sitename \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_transect_intersects.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m---> 38\u001b[0m         TransectInterGDF \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     40\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin\n\u001b[1;32m     41\u001b[0m               (filepath , sitename, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mintersections\u001b[39m\u001b[38;5;124m'\u001b[39m, sitename \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_transect_water_intersects.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     42\u001b[0m         TransectInterGDFWater \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(f)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'geopandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Name of site to save directory and files under\n",
     "sitename = 'StAndrewsEastS2Full'\n",
@@ -92,6 +79,141 @@
     "CoastalDF = Predictions.CompileTransectData(TransectInterGDF, TransectInterGDFWater, TransectInterGDFTopo, TransectInterGDFWave)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5489a438-c34d-4bed-a4ac-82b965b27629",
+   "metadata": {},
+   "source": [
+    "### Prepare data for training\n",
+    "Ensure each of the variables are synchronised by timestep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e9f6b792-d434-4500-8ccb-84c651d2a3e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    TransectID                                              dates  \\\n",
+      "50          50  [2015-08-07, 2015-08-17, 2015-11-22, 2016-02-1...   \n",
+      "\n",
+      "                                            distances  \\\n",
+      "50  [137.069698951171, 144.04709852809864, 138.324...   \n",
+      "\n",
+      "                                           wlcorrdist  \\\n",
+      "50  [509.7608836456035, 181.57936499534543, 440.88...   \n",
+      "\n",
+      "                                            waterelev  \\\n",
+      "50  [-2.079662590257345, 0.5471072274658595, -1.75...   \n",
+      "\n",
+      "                                           beachwidth  \\\n",
+      "50  [365.7137851175048, 43.25529176978043, 295.990...   \n",
+      "\n",
+      "                                              TZwidth  TZwidthMn   SlopeMax  \\\n",
+      "50  [10.196233442125981, 10.196233442125981, 10.19...  15.273152  29.881193   \n",
+      "\n",
+      "    SlopeMean                                             WaveHs  \\\n",
+      "50  10.838753  [0.25638099458485064, 0.16007945575151394, 0.8...   \n",
+      "\n",
+      "                                              WaveDir  \\\n",
+      "50  [91.71905048709071, 70.2255225279233, 57.96026...   \n",
+      "\n",
+      "                                               WaveTp  WaveDiffus  \n",
+      "50  [5.599713980392192, 5.104121052580668, 5.86980...   -0.000057  \n"
+     ]
+    }
+   ],
+   "source": [
+    "TransectIDs = [50]\n",
+    "\n",
+    "for Tr in TransectIDs:\n",
+    "    TransectDF = CoastalDF.iloc[[Tr],:] # single-row dataframe\n",
+    "print(TransectDF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fd41402-a8ab-4639-b6bc-a8f47b05b953",
+   "metadata": {},
+   "source": [
+    "### Feature engineering\n",
+    "Time-lag the features to capture temporal dependencies and aggregate features over a moving window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8a8f580-281c-4051-bee4-e34cb3233708",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "268804d0-5345-43be-a85f-dcd23b5f69dd",
+   "metadata": {},
+   "source": [
+    "### Define model\n",
+    "\n",
+    "RNN model may need attention layer to help focus on important parts of timeseries (i.e. storm/high-risk events)\n",
+    "Model architecture:\n",
+    "- Input layers: \n",
+    "  - Historic obervations layer [shape = (batch_size, timesteps, num of variables)]\n",
+    "  - Forecast data layer [shape = (batch_size, forecast_steps, num of variables)]\n",
+    "- Feature fusion layer:\n",
+    "  - Concatenate two LSTMs into one single feature vector\n",
+    "  - Pass to fully connected dense layer\n",
+    "- Output layer:\n",
+    "  - Softmax layer for generating multiclass of risk levels\n",
+    "  - Define model by compiling (using Adam optimiser and categorical cross-entropy loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f0e4006-12c9-487f-b836-30ff93acafc5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0082ac98-ca17-458b-8f6d-fcb780eca70d",
+   "metadata": {},
+   "source": [
+    "### Separate data into train/validate/test data\n",
+    "Goal is to minimise differnece between predicted and actually labelled risk levels, which are based on past/current state and strength of forecast severity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef0b4a97-368f-415a-96ee-c99c9a90e4b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95e5bcaa-aeef-44c0-962f-beca819e7934",
+   "metadata": {},
+   "source": [
+    "### Prediction\n",
+    "Incorporate in forecast data so that newest forecast will guide the overall risk classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47be72b2-af5b-46fb-bc17-a0e64a00763f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
