Trying to fix inconsistent EPSG codes for N vs S Hemisphere by setting all EPSGs (including the one for defining georef) as EPSG for the refline

--- a/VedgeSat_DriverTemplate.ipynb
+++ b/VedgeSat_DriverTemplate.ipynb
@@ -65,13 +65,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define desired coordinate projections\n",
-    "# NOTE: image_epsg should always be in the NORTHERN UTM zone, regardless of whether your location is\n",
-    "# in the northern or southern hemisphere. E.g. if your location is New South Wales (UTM Zone 56S),\n",
-    "# the image_epsg should be 32656 (which is UTM Zone 56N).\n",
-    "projection_epsg = 27700 # OSGB 1936\n",
-    "image_epsg = 32630\n",
-    "\n",
     "# Define AOI using coordinates of a rectangle\n",
     "# The points represent the corners of a bounding box that go around your site\n",
     "sitename = 'SITENAME'\n",
@@ -325,12 +318,12 @@
     "if os.path.isdir(BasePath) is False:\n",
     "    os.mkdir(BasePath)\n",
     "\n",
-    "image_epsg = Toolbox.GetImageEPSG(inputs, metadata)\n",
+    "projection_epsg, _ = Toolbox.FindUTM(polygon[0][0][1],polygon[0][0][0])\n",
     "\n",
     "settings = {\n",
     "    # general parameters:\n",
     "    'cloud_thresh': cloud_thresh,        # threshold on maximum cloud cover\n",
-    "    'output_epsg': image_epsg,     # epsg code of spatial reference system desired for the output   \n",
+    "    'output_epsg': projection_epsg,     # epsg code of spatial reference system desired for the output   \n",
     "    'wetdry': wetdry,              # extract wet-dry boundary as well as veg\n",
     "    # quality control:\n",
     "    'check_detection': True,    # if True, shows each shoreline detection to the user for validation\n",
